--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,24 +29,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  countup: ^0.1.4
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_native_splash: ^2.3.2
   flutter_svg: any
   font_awesome_flutter: any
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -74,17 +70,17 @@ flutter:
     - family: Gulzar
       fonts:
         - asset: assets/Gulzar-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
+    - family: Koll
+      fonts:
+        - asset: assets/Mooli-Regular.ttf
+        # - asset: assets/Kollektif.ttf
+        #   weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-flutter_native_splash :
-    android : true
-    color : #fff
-    image : "assets/Medinova.png"
+flutter_native_splash:
+  android: true
+  color: #fff
+    null
+  image: "assets/Medinova.png"
